# AEZ-Evolution

./: .dockerignore  .gitignore  Anchor.toml  DEMO-README.md  Dockerfile  PITCH-DECK.md  PROOF-OF-EXISTENCE.json  Procfile  README.md  SUMMARY.md  VISUALIZATION-NOTES.md  demo-auto.py  demo.py  generate_pdf.py  generate_video.py  render.yaml  requirements.txt  run_demo_server.py  test_all.py  timestamp_onchain.py
dashboard/: index.html  simple-viz.html  test-leaderboard.html  test-viz.html  trust-battle.html  trust-cascade-demo.html  trust-network.html
engine/: __init__.py  agent.py  evolution.py  immune.py  narrator.py  server.py  trust.py
orchestrator/: __init__.py  api.py  client.py  requirements.txt  run.py  run.sh  server.py  simulation.py  simulation_simple.py  simulation_v2.py  strategies.py
programs/aez-evolution/: Cargo.toml
programs/aez-evolution/src/: lib.rs
tests/: aez-evolution.js
