[package]
name = "aez-evolution"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "aez_evolution"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
# Using 0.30.1 for better compatibility with Solana 1.18's platform-tools
anchor-lang = "0.30.1"

